CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(MyQtExample)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

ADD_SUBDIRECTORY(AnalogClock)
ADD_SUBDIRECTORY(rasterwindow)

#ADD_SUBDIRECTORY(CREATION_MODE/Factory)
#ADD_SUBDIRECTORY(CREATION_MODE/Prototype)
#ADD_SUBDIRECTORY(CREATION_MODE/Singleton)


